--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
+    "ip": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
     "kafka-node": "^5.0.0",
+    "kafkajs": "^1.15.0",
     "moment": "^2.25.3",
     "mongoose": "^5.9.13",
     "multer": "^1.4.2",
